--- a/book/book.tex
+++ b/book/book.tex
@@ -749,107 +749,106 @@ Kuang He, Wei Huang, Karen Barber, and Eric Ransom.
 % START THE BOOK
 \mainmatter
 
-\chapter{The way of the program}
+\chapter{El camino del programa}
 
-The goal of this book is to teach you to think like a computer
-scientist.  This way of thinking combines some of the best features of
-mathematics, engineering, and natural science.  Like mathematicians,
-computer scientists use formal languages to denote ideas (specifically
-computations).  Like engineers, they design things, assembling
-components into systems and evaluating tradeoffs among alternatives.
-Like scientists, they observe the behavior of complex systems, form
-hypotheses, and test predictions.  \index{problem solving}
+El objetivo de este libro es enseñarte a pensar como un informático. Esta forma
+de pensar combina algunas de las mejores características de las matemáticas,
+la ingeniería y las ciencias naturales.  Al igual que los matemáticos, los
+informáticos usan lenguajes formales para denotar ideas (específicamente,
+computaciones). Al igual que los ingenieros, diseñan cosas, ensamblando
+componentes en sistemas y evaluando compensasiones entre alternativas.
+Al igual que los científicos, observan el comportamiento de sistemas complejos,
+a partir de hipótesis, y prueban predicciones.  \index{resolución de problemas}
 
-The single most important skill for a computer scientist is {\bf
-  problem solving}.  Problem solving means the ability to formulate
-problems, think creatively about solutions, and express a solution
-clearly and accurately.  As it turns out, the process of learning to
-program is an excellent opportunity to practice problem-solving
-skills.  That's why this chapter is called, ``The way of the
-program''.
+La habilidad más importante de un informático es la {\bf resolución
+ de problemas}.  La resolución de problemas supone la capacidad para
+ formular problemas, pensar creativamente en soluciones y emitir una solución
+de manera clara y precisa.  Como resultado, el proceso de aprender a
+programar es una excelente oportunidad para practicar habilidades de
+resolución de problemas.  Es por eso que este capítulo se llama ``El camino del
+programa''.
 
-On one level, you will be learning to program, a useful skill by
-itself.  On another level, you will use programming as a means to an
-end.  As we go along, that end will become clearer.
+En un nivel, aprenderás a programar, una habilidad útil por
+sí misma.  En otro nivel, usarás la programación como un medio para un
+fin.  Mientras avancemos, ese fin se volverá más claro.
 
 
-\section{What is a program?}
+\section{¿Qué es un programa?}
 
-A {\bf program} is a sequence of instructions that specifies how to
-perform a computation.  The computation might be something
-mathematical, such as solving a system of equations or finding the
-roots of a polynomial, but it can also be a symbolic computation, such
-as searching and replacing text in a document or something
-graphical, like processing an image or playing a video.
-\index{program}
+Un {\bf programa} es una secuencia de instrucciones que especifica cómo
+realizar una computación.  La computación puede ser algo matemático,
+tal como resolver un sistema de ecuaciones o encontrar las raíces de un
+polinomio, pero también puede ser una computación simbólica, tal como
+buscar y reemplazar texto en un documento o algo gráfico, como procesar
+una imagen o reproducir un video.
+\index{programa}
 
-The details look different in different languages, but a few basic
-instructions appear in just about every language:
+Los detalles se ven diferentes en diferentes lenguajes, pero unas pocas
+instrucciones básicas aparecen en casi todos los lenguajes:
 
 \begin{description}
 
-\item[input:] Get data from the keyboard, a file, the network, or some
-other device.
+\item[entrada:] obtener datos desde el teclado, un archivo, la red o algún
+otro dispositivo.
 
-\item[output:] Display data on the screen, save it in a
-file, send it over the network, etc.
+\item[salida:] mostrar datos en la pantalla, guardarlos en un
+archivo, enviarlos a través de la red, etc.
 
-\item[math:] Perform basic mathematical operations like addition and
-multiplication.
+\item[matemáticas:] realizar operaciones matemáticas básicas como la suma y
+la multiplicación.
 
-\item[conditional execution:] Check for certain conditions and
-run the appropriate code.
+\item[ejecución condicional:] verificar ciertas condiciones y
+ejecutar el código apropiado.
 
-\item[repetition:] Perform some action repeatedly, usually with
-some variation.
+\item[repetición:] realizar alguna acción repetidas veces, usualmente con
+alguna variación.
 
 \end{description}
 
-Believe it or not, that's pretty much all there is to it.  Every
-program you've ever used, no matter how complicated, is made up of
-instructions that look pretty much like these.  So you can think of
-programming as the process of breaking a large, complex task
-into smaller and smaller subtasks until the subtasks are
-simple enough to be performed with one of these basic instructions.
+Lo creas o no, eso es prácticamente todo lo que hay.  Cada
+programa que has usado, no importa cuán complicado, está compuesto de
+instrucciones que se parecen mucho a estas.  Así que puedes pensar en
+la programación como el proceso de romper una tarea grande y compleja en
+subtareas cada vez más pequeñas hasta que las subtareas son lo suficientemente
+simples para ser realizadas con una de estas instrucciones básicas.
 
 
-\section{Running Python}
+\section{Ejecutar Python}
 
-One of the challenges of getting started with Python is that you
-might have to install Python and related software on your computer.
-If you are familiar with your operating system, and especially
-if you are comfortable with the command-line interface, you will
-have no trouble installing Python.  But for beginners, it can be
-painful to learn about system administration and programming at the
-same time.
-\index{running Python}
-\index{Python!running}
+Uno de los desafíos de comenzar con Python es que puede que tengas
+que instalar Python y software relacionado en tu computador.
+Si estás familiarizado con tu sistema operativo, y especialmente
+si te sientes cómodo con la interfaz de línea de comandos, no tendrás
+problemas instalando Python.  Pero para principiantes, puede ser
+doloroso aprender sobre administración del sistema y programación al
+mismo tiempo.
+\index{ejecutar Python}
+\index{Python!ejecutar}
 
-To avoid that problem, I recommend that you start out running Python
-in a browser.  Later, when you are comfortable with Python, I'll
-make suggestions for installing Python on your computer.
-\index{Python in a browser}
+Para evitar ese problema, recomiendo que comiences ejecutando Python
+en un navegador.  Después, cuando estés cómodo con Python, haré
+sugerencias para instalar Python en tu computador.
+\index{Python en un navegador}
 
-There are a number of web pages you can use to run Python.  If you
-already have a favorite, go ahead and use it.  Otherwise I recommend
+Hay una serie de páginas web que puedes usar para ejecutar Python.  Si ya
+tienes una favorita, ve y úsala.  De otra manera, recomiendo
 PythonAnywhere.  I provide detailed instructions for getting started
 at \url{http://tinyurl.com/thinkpython2e}.
 \index{PythonAnywhere}
 
-There are two versions of Python, called Python 2 and Python 3.
-They are very similar, so if you learn one, it is easy to switch
-to the other.  In fact, there are only a few differences you will
-encounter as a beginner.
-This book is written for Python 3, but I include some notes
-about Python 2.
+Hay dos versiones de Python, llamadas Python 2 y Python 3.
+Son muy similares, así que si aprendes una, es fácil cambiar
+a la otra.  De hecho, hay sólo unas pocas diferencias que encontrarás
+como principiante.
+Este libro está escrito para Python 3, pero incluyo algunas notas
+sobre Python 2.
 \index{Python 2}
 
-The Python {\bf interpreter} is a program that reads and executes
-Python code.  Depending on your environment, you might start the
-interpreter by clicking on an icon, or by typing {\tt python} on
-a command line.
-When it starts, you should see output like this:
-\index{interpreter}
+El {\bf intérprete} de Python es un programa que lee y ejecuta
+código de Python.  Dependiendo de tu entorno, puedes iniciar el intérprete
+haciendo clic en un ícono, o escribiendo {\tt python} en una línea de comando.
+Cuando se inicia, deberías ver una salida como esta:
+\index{intérprete}
 
 \begin{verbatim}
 Python 3.4.0 (default, Jun 19 2015, 14:20:21)
@@ -858,17 +857,17 @@ Type "help", "copyright", "credits" or "license" for more information.
 >>>
 \end{verbatim}
 %
-The first three lines contain information about the interpreter
-and the operating system it's running on, so it might be different for
-you.  But you should check that the version number, which is
-{\tt 3.4.0} in this example, begins with 3, which indicates that
-you are running Python 3.  If it begins with 2, you are running
-(you guessed it) Python 2.
+Las primeras tres líneas contienen información acerca del intérprete
+y el sistema operativo en el cual se está ejecutando, así que puede ser
+diferente para ti.  Pero deberías verificar que el número de versión, el cual
+es {\tt 3.4.0} en este ejemplo, comience con 3, el cual indica que estás
+ejecutando Python 3.  Si comienza con 2, estás ejecutando
+(lo adivinaste) Python 2.
 
-The last line is a {\bf prompt} that indicates that the interpreter is
-ready for you to enter code.
-If you type a line of code and hit Enter, the interpreter displays the
-result:
+La última línea es un {\bf prompt} que indica que el intérprete está listo
+para que introduzcas código.
+Si escribes una línea de código y presionas la tecla Entrar, el intérprete
+muestra el resultado:
 \index{prompt}
 
 \begin{verbatim}
@@ -876,63 +875,63 @@ result:
 2
 \end{verbatim}
 %
-Now you're ready to get started.
-From here on, I assume that you know how to start the Python
-interpreter and run code.
+Ahora estás listo para comenzar.
+A partir de aquí, supongo que sabes cómo iniciar el intérprete de Python
+y ejecutar código.
 
 
-\section{The first program}
+\section{El primer programa}
 \label{hello}
-\index{Hello, World}
+\index{Hola, Mundo}
 
-Traditionally, the first program you write in a new language
-is called ``Hello, World!'' because all it does is display the
-words ``Hello, World!''.  In Python, it looks like this:
-
-\begin{verbatim}
->>> print('Hello, World!')
-\end{verbatim}
-%
-This is an example of a {\bf print statement}, although it
-doesn't actually print anything on paper.  It displays a result on the
-screen.  In this case, the result is the words
+Tradicionalmente, el primer programa que escribes en un nuevo lenguaje
+de programación se llama ``¡Hola, Mundo!'' porque todo lo que hace es mostrar
+las palabras ``¡Hola, Mundo!''.  En Python, se ve así:
 
 \begin{verbatim}
-Hello, World!
+>>> print('¡Hola, Mundo!')
 \end{verbatim}
 %
-The quotation marks in the program mark the beginning and end
-of the text to be displayed; they don't appear in the result.
-\index{quotation mark}
-\index{print statement}
-\index{statement!print}
+Este es un ejemplo de una {\bf sentencia print}, aunque
+en realidad no imprime nada en papel.  Ésta muestra un resultado en la
+pantalla.  En este caso, el resultado es las palabras
 
-The parentheses indicate that {\tt print} is a function.  We'll get
-to functions in Chapter~\ref{funcchap}.
-\index{function} \index{print function}
+\begin{verbatim}
+¡Hola, Mundo!
+\end{verbatim}
+%
+Las comillas en el programa marcan el principio y el final
+del texto a visualizar; éstas no aparecen en el resultado.
+\index{comillas}
+\index{sentencia print}
+\index{print!sentencia}
 
-In Python 2, the print statement is slightly different; it is not
-a function, so it doesn't use parentheses.
+Los paréntesis indican que {\tt print} es una función.  Llegaremos
+a las funciones en el Capítulo~\ref{funcchap}.
+\index{función} \index{función print}
+
+En Python 2, la sentencia print es un poco diferente; no es
+una función, así que no usa paréntesis.
 \index{Python 2}
 
 \begin{verbatim}
->>> print 'Hello, World!'
+>>> print '¡Hola, Mundo!'
 \end{verbatim}
 %
-This distinction will make more sense soon, but that's enough to
-get started.
+Esta distinción tendrá más sentido pronto, pero eso es suficiente para
+comenzar.
 
 
-\section{Arithmetic operators}
-\index{operator!arithmetic}
-\index{arithmetic operator}
+\section{Operadores aritméticos}
+\index{aritmético!operador}
+\index{operador aritmético}
 
-After ``Hello, World'', the next step is arithmetic.  Python provides
-{\bf operators}, which are special symbols that represent computations
-like addition and multiplication.
+Después de ``Hola, Mundo'', el siguiente paso es la aritmética.  Python
+proporciona {\bf operadores}, los cuales son símbolos especiales que
+representan computaciones como la suma y la multiplicación.
 
-The operators {\tt +}, {\tt -}, and {\tt *} perform addition,
-subtraction, and multiplication, as in the following examples:
+Los operadores {\tt +}, {\tt -}, and {\tt *} realizan sumas,
+restas y multiplicaciones, como en los siguientes ejemplos:
 
 \begin{verbatim}
 >>> 40 + 2
@@ -943,87 +942,87 @@ subtraction, and multiplication, as in the following examples:
 42
 \end{verbatim}
 %
-The operator {\tt /} performs division:
+El operador {\tt /} realiza divisiones:
 
 \begin{verbatim}
 >>> 84 / 2
 42.0
 \end{verbatim}
 %
-You might wonder why the result is {\tt 42.0} instead of {\tt 42}.
-I'll explain in the next section.
+Puedes preguntarte por qué el resultado es {\tt 42.0} en lugar de {\tt 42}.
+Lo explicaré en la sección siguiente.
 
-Finally, the operator {\tt **} performs exponentiation; that is,
-it raises a number to a power:
+Finalmente, el operador {\tt **} realiza potenciaciones; es decir,
+eleva un número a una potencia:
 
 \begin{verbatim}
 >>> 6**2 + 6
 42
 \end{verbatim}
 %
-In some other languages, \verb"^" is used for exponentiation, but
-in Python it is a bitwise operator called XOR.  If you are not
-familiar with bitwise operators, the result will surprise you:
+En algunos otros lenguajes, \verb"^" se usa para potenciación, pero
+en Python es un operador bit a bit llamado XOR.  Si no estás familiarizado
+con los operadores bit a bit, el resultado te sorprenderá:
 
 \begin{verbatim}
 >>> 6 ^ 2
 4
 \end{verbatim}
 %
-I won't cover
-bitwise operators in this book, but you can read about
-them at \url{http://wiki.python.org/moin/BitwiseOperators}.
-\index{bitwise operator}
-\index{operator!bitwise}
+No cubriré
+operadores bit a bit en este libro, pero puedes leer sobre
+éstos en \url{http://wiki.python.org/moin/BitwiseOperators}.
+\index{operador bit a bit}
+\index{bit a bit!operador}
 
 
-\section{Values and types}
-\index{value}
-\index{type}
-\index{string}
+\section{Valores y tipos}
+\index{valor}
+\index{tipo}
+\index{cadena}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% \index{string} ¿también?
 
-A {\bf value} is one of the basic things a program works with, like a
-letter or a number.  Some values we have seen so far are {\tt 2},
-{\tt 42.0}, and \verb"'Hello, World!'".
+Un {\bf valor} es una de las cosas básicas con las que funciona un programa,
+como una letra o un número.  Algunos valores que hemos visto hasta ahora son
+{\tt 2}, {\tt 42.0} y \verb"'¡Hola, Mundo!'".
 
-These values belong to different {\bf types}:
-{\tt 2} is an {\bf integer}, {\tt 42.0} is a {\bf floating-point number},
-and \verb"'Hello, World!'" is a {\bf string},
-so-called because the letters it contains are strung together.
-\index{integer}
-\index{floating-point}
+Estos valores pertenecen a diferentes {\bf tipos}: {\tt 2} es un {\bf entero}
+(en inglés, {\em integer}), {\tt 42.0} es un{\bf número de coma flotante} (en
+inglés, {\em floating-point number}), y \verb"'¡Hola, Mundo!'" es una {\bf
+cadena} (en inglés, {\em string}), llamada así porque las letras que contiene están unidas.
+\index{entero}
+\index{coma flotante}
 
-If you are not sure what type a value has, the interpreter can
-tell you:
+Si no estás seguro de qué tipo tiene un valor, el intérprete te lo
+puede decir:
 
 \begin{verbatim}
 >>> type(2)
 <class 'int'>
 >>> type(42.0)
 <class 'float'>
->>> type('Hello, World!')
+>>> type('¡Hola, Mundo!')
 <class 'str'>
 \end{verbatim}
 %
-In these results, the word ``class'' is used in the sense of
-a category; a type is a category of values.
+En estos resultados, la palabra ``class'' se usa en el sentido de
+una categoría; un tipo es una categoría de valores.
 \index{class}
 
-Not surprisingly, integers belong to the type {\tt int},
-strings belong to {\tt str} and floating-point
-numbers belong to {\tt float}.
-\index{type}
-\index{string type}
-\index{type!str}
-\index{int type}
-\index{type!int}
-\index{float type}
-\index{type!float}
+Evidentemente, los enteros pertenecen al tipo {\tt int},
+las cadenas pertenecen a {\tt str} y los números de
+coma flotante pertenecen a {\tt float}.
+\index{tipo}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{string type}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{type!str}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{int type}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{type!int}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{float type}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{type!float}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-What about values like \verb"'2'" and \verb"'42.0'"?
-They look like numbers, but they are in quotation marks like
-strings.
-\index{quotation mark}
+¿Qué pasa con los valores como \verb"'2'" y \verb"'42.0'"?
+Se ven como números, pero están en comillas como
+cadenas.
+\index{comillas}
 
 \begin{verbatim}
 >>> type('2')
@@ -1032,20 +1031,20 @@ strings.
 <class 'str'>
 \end{verbatim}
 %
-They're strings.
+Son cadenas.
 
-When you type a large integer, you might be tempted to use commas
-between groups of digits, as in {\tt 1,000,000}.  This is not a
-legal {\em integer} in Python, but it is legal:
+Cuando escribes un entero grande, puedes estar tentado a usar comas
+entre grupos de dígitos, como en {\tt 1,000,000}.  Este no es un
+{\em entero} legal en Python, pero es legal:
 
 \begin{verbatim}
 >>> 1,000,000
 (1, 0, 0)
 \end{verbatim}
 %
-That's not what we expected at all!  Python interprets {\tt
-  1,000,000} as a comma-separated sequence of integers.  We'll learn
-more about this kind of sequence later.
+¡Eso no es lo que esperábamos en absoluto!  Python interpreta {\tt
+  1,000,000} como una secuencia de enteros separados por comas.  Aprenderemos
+más sobre este tipo de secuencia más adelante.
 \index{sequence}
 
 %This is the first example we have seen of a semantic error: the code
@@ -1058,83 +1057,83 @@ more about this kind of sequence later.
 
 
 
-\section{Formal and natural languages}
-\index{formal language}
-\index{natural language}
-\index{language!formal}
-\index{language!natural}
+\section{Lenguajes formales y lenguajes naturales}
+\index{lenguaje formal}
+\index{lenguaje natural}
+\index{formal!lenguaje}
+\index{natural!lenguaje}
 
-{\bf Natural languages} are the languages people speak,
-such as English, Spanish, and French.  They were not designed
-by people (although people try to impose some order on them);
-they evolved naturally.
+Los {\bf lenguajes naturales} son los lenguajes que hablan las personas,
+tales como el inglés, el español y el francés.  Éstos no fueron diseñados
+por las personas (aunque las personas tratan de imponerles algo de orden);
+evolucionan de manera natural.
 
-{\bf Formal languages} are languages that are designed by people for
-specific applications.  For example, the notation that mathematicians
-use is a formal language that is particularly good at denoting
-relationships among numbers and symbols.  Chemists use a formal
-language to represent the chemical structure of molecules.  And
-most importantly:
+Los {\bf lenguajes formales} son lenguajes que están diseñados por personas
+para aplicaciones específicas.  Por ejemplo, la notación que usan los
+matemáticos es un lenguaje formal que es particularmente bueno al denotar
+relaciones entre números y símbolos.  Los químicos usan un lenguaje formal
+para representar la estructura química de las moléculas.  Y
+más importante:
 
 \begin{quote}
-{\bf Programming languages are formal languages that have been
-designed to express computations.}
+{\bf Los lenguajes de programación son lenguajes formales que han sido
+diseñados para expresar computaciones.}
 \end{quote}
 
-Formal languages tend to have strict {\bf syntax} rules that
-govern the structure of statements.
-For example, in mathematics the statement
-$3 + 3 = 6$ has correct syntax, but
-$3 + = 3 \$ 6$ does not.  In chemistry
-$H_2O$ is a syntactically correct formula, but $_2Zz$ is not.
-\index{syntax}
+Los lenguajes formales tienden a tener reglas de {\bf sintaxis} que
+gobiernen la estructura de las sentencias.
+Por ejemplo, en matemáticas la sentencia
+$3 + 3 = 6$ tiene sintaxis correcta, pero
+$3 + = 3 \$ 6$ no la tiene.  En química
+$H_2O$ es una fórmula sintácticamente correcta, pero $_2Zz$ no.
+\index{sintaxis}
 
-Syntax rules come in two flavors, pertaining to {\bf tokens} and
-structure.  Tokens are the basic elements of the language, such as
-words, numbers, and chemical elements.  One of the problems with
-$3 += 3 \$ 6$ is that \( \$ \) is not a legal token in mathematics
-(at least as far as I know).  Similarly, $_2Zz$ is not legal because
-there is no element with the abbreviation $Zz$.
+Hay dos tipos de reglas de sintaxis, relacionadas con los {\bf tokens} y la
+estructura.  Los tokens son los elementos básicos del lenguaje, tales como
+palabras, números y elementos químicos.  Uno de los problemas con
+$3 += 3 \$ 6$ es que \( \$ \) no es un token legal en matemáticas
+(al menos por lo que sé).  Del mismo modo, $_2Zz$ no es legal porque
+no hay ningún elemento con la abreviatura $Zz$.
 \index{token}
-\index{structure}
+\index{estructura}
 
-The second type of syntax rule pertains to the way tokens are
-combined.  The equation $3 +/ 3$ is illegal because even though $+$
-and $/$ are legal tokens, you can't have one right after the other.
-Similarly, in a chemical formula the subscript comes after the element
-name, not before.
+El segundo tipo de regla de sintaxis tiene relación con la manera en que los
+tokens están combinados.  La ecuación $3 +/ 3$ es ilegal porque aunque $+$
+y $/$ son tokens legales, no puedes tener uno justo después del otro.
+Del mismo modo, en una fórmula químca el subíndice viene después del nombre
+del elemento, no antes.
 
-This is @ well-structured Engli\$h
-sentence with invalid t*kens in it.  This sentence all valid tokens
-has, but invalid structure with.
+Esta es un@ oración en e$paño\ bien estructurada
+con t*kens inválidos.  Esta oración todos los tokens válidos
+tiene pero estructura inválida presenta.
 
-When you read a sentence in English or a statement in a formal
-language, you have to figure out the structure
-(although in a natural language you do this subconsciously).  This
-process is called {\bf parsing}.
+Cuando lees una oración en español o una sentencia en un lenguaje
+formal, tienes que descifrar la estructura
+(aunque en un lenguaje natural lo haces de manera subconsciente).  Este
+proceso se llama {\bf parsing}.
 \index{parse}
 
-Although formal and natural languages have many features in
-common---tokens, structure, and syntax---there are some
-differences:
-\index{ambiguity}
-\index{redundancy}
-\index{literalness}
+Aunque los lenguajes formales y naturales tienen muchas características en
+commún---tokens, estructura y sintaxis---existen algunas
+diferencias:
+\index{ambigüedad}
+\index{redundancia}
+\index{literalidad}
 
 \begin{description}
 
-\item[ambiguity:] Natural languages are full of ambiguity, which
+\item[ambigüedad:] Natural languages are full of ambiguity, which
 people deal with by using contextual clues and other information.
 Formal languages are designed to be nearly or completely unambiguous,
 which means that any statement has exactly one meaning,
 regardless of context.
 
-\item[redundancy:] In order to make up for ambiguity and reduce
+\item[redundancia:] In order to make up for ambiguity and reduce
 misunderstandings, natural languages employ lots of
 redundancy.  As a result, they are often verbose.  Formal languages
 are less redundant and more concise.
 
-\item[literalness:] Natural languages are full of idiom and metaphor.
+\item[literalidad:] Natural languages are full of idiom and metaphor.
 If I say, ``The penny dropped'', there is probably no penny and
 nothing dropping (this idiom means that someone understood something
 after a period of confusion).  Formal languages
@@ -1142,78 +1141,78 @@ mean exactly what they say.
 
 \end{description}
 
-Because we all grow up speaking natural languages, it is sometimes
-hard to adjust to formal languages.  The difference between formal and
-natural language is like the difference between poetry and prose, but
-more so: \index{poetry} \index{prose}
+Debido a que todos crecemos hablando lenguajes naturales, a veces es
+difícil adaptarse a los lenguajes formales.  La diferencia entre lenguaje formal
+y lenguaje natural es como la diferencia entre poesía y prosa, pero
+más aún: \index{poesía} \index{prosa}
 
 \begin{description}
 
-\item[Poetry:] Words are used for their sounds as well as for
+\item[Poesía:] Words are used for their sounds as well as for
 their meaning, and the whole poem together creates an effect or
 emotional response.  Ambiguity is not only common but often
 deliberate.
 
-\item[Prose:] The literal meaning of words is more important,
+\item[Prosa:] The literal meaning of words is more important,
 and the structure contributes more meaning.  Prose is more amenable to
 analysis than poetry but still often ambiguous.
 
-\item[Programs:] The meaning of a computer program is unambiguous
+\item[Programas:] The meaning of a computer program is unambiguous
 and literal, and can be understood entirely by analysis of the
 tokens and structure.
 
 \end{description}
 
-Formal languages are more dense
-than natural languages, so it takes longer to read them.  Also, the
-structure is important, so it is not always best to read
-from top to bottom, left to right.  Instead, learn to parse the
-program in your head, identifying the tokens and interpreting the
-structure.  Finally, the details matter.  Small errors in
-spelling and punctuation, which you can get away
-with in natural languages, can make a big difference in a formal
-language.
+Los lenguajes formales son más densos
+que los lenguajes naturales, así que lleva más tiempo leerlos.  Además, la
+estructura es importante, por lo que no siempre es mejor leer
+de arriba a abajo, de izquierda a derecha.  En su lugar, aprender a analizar
+sintácticamente el programa en tu cabeza, identificar los tokens e interpretar
+la estructura.  Finalmente, los detalles importan.  Pequeños errores en
+la ortografía y puntuación, que puedes cometer
+con los lenguajes naturales, pueden hacer una gran diferencia en un lenguaje
+formal.
 
 
-\section{Debugging}
-\index{debugging}
+\section{Depuración}
+\index{depuración}
 
-Programmers make mistakes.  For whimsical reasons, programming errors
-are called {\bf bugs} and the process of tracking them down is called
-{\bf debugging}.
-\index{debugging}
+Los programadores cometen errores.  Por razones caprichosas, los errores de
+programación se llaman {\bf bugs} y el proceso de localizarlos se llama
+{\bf depuración} (en inglés, ``debugging'').
+\index{depuración}
 \index{bug}
 
-Programming, and especially debugging, sometimes brings out strong
-emotions.  If you are struggling with a difficult bug, you might
-feel angry, despondent, or embarrassed.
+La programación, y especialmente la depuración, a veces sacan emociones
+fuertes.  Si estás luchando con un error de programación difícil, podrías
+sentir ira, desánimo o vergüenza.
 
-There is evidence that people naturally respond to computers as if
-they were people.  When they work well, we think
-of them as teammates, and when they are obstinate or rude, we
-respond to them the same way we respond to rude,
-obstinate people (Reeves and Nass, {\it The Media
+Hay evidencia de que las personas naturalmente responden a los computadores
+como si éstos fueran personas.  Cuando funcionan bien, pensamos en ellos como
+compañeros de equipo, y cuando son obstinados o rudos, respondemos a ellos
+de la misma manera que respondemos a las personas rudas
+y obstinadas (Reeves and Nass, {\it The Media
     Equation: How People Treat Computers, Television, and New Media
     Like Real People and Places}).
-\index{debugging!emotional response}
-\index{emotional debugging}
+\index{depuración!respuesta emocional}
+\index{depuración emocional}
 
-Preparing for these reactions might help you deal with them.
-One approach is to think of the computer as an employee with
-certain strengths, like speed and precision, and
-particular weaknesses, like lack of empathy and inability
-to grasp the big picture.
+Prepararse para estas reacciones podría ayudarte a lidiar con ellas.
+Un enfoque es pensar en el computador como un empleado con
+ciertas fortalezas, como la velocidad y la precisión, y
+debilidades particulares, como la falta de empatía y la incapacidad
+para comprender el panorama general.
 
-Your job is to be a good manager: find ways to take advantage
-of the strengths and mitigate the weaknesses.  And find ways
-to use your emotions to engage with the problem,
-without letting your reactions interfere with your ability
-to work effectively.
+Tu trabajo es ser un buen jefe: encontrar maneras de aprovechar las
+fortalezas y mitigar las debilidades.  Y encontrar maneras
+de usar tus emociones para abordar el problema,
+sin dejar que tus reacciones interfieran con tu capacidad
+de trabajar eficazmente.
 
-Learning to debug can be frustrating, but it is a valuable skill
-that is useful for many activities beyond programming.  At the
-end of each chapter there is a section, like this one,
-with my suggestions for debugging.  I hope they help!
+Aprender a depurar puede ser frustrante, pero es una habilidad valiosa
+que es útil para muchas actividades más allá de la programación.  Al final
+de cada capítulo hay una sección, como esta,
+con mis sugerencias para la depuración.  ¡Espero que ayuden!
 
 
 \section{Glossary}
@@ -1304,17 +1303,17 @@ a program, analogous to a word in a natural language.
 \end{description}
 
 
-\section{Exercises}
+\section{Ejercicios}
 
 \begin{exercise}
 
-It is a good idea to read this book in front of a computer so you can
-try out the examples as you go.
+Es una buena idea leer este libro en frente de un computador para que puedas
+probar los ejemplos mientras avanzas.
 
-Whenever you are experimenting with a new feature, you should try
-to make mistakes.  For example, in the ``Hello, world!'' program,
-what happens if you leave out one of the quotation marks?  What
-if you leave out both?  What if you spell {\tt print} wrong?
+Cada vez que experimentes con una nueva característica, deberías intentar
+cometer errores.  Por ejemplo, en el programa ``¡Hola, mundo!'',
+¿qué ocurre si omites una de las comillas?  ¿Y
+si omites ambas?  ¿Qué ocurre si escribes {\tt print} de manera incorrecta?
 \index{error message}
 
 This kind of experiment helps you remember what you read; it also
@@ -1324,26 +1323,49 @@ later and accidentally.
 
 \begin{enumerate}
 
-\item In a print statement, what happens if you leave out one
-of the parentheses, or both?
+\item En una sentencia print, ¿qué ocurre si omites uno
+de los paréntesis, o ambos?
 
-\item If you are trying to print a string, what happens if you
-leave out one of the quotation marks, or both?
+\item Si estás intentando imprimir una cadena con print, ¿qué ocurre si
+omites una de las comillas, o ambas?
 
-\item You can use a minus sign to make a negative number like
-{\tt -2}.  What happens if you put a plus sign before a number?
-What about {\tt 2++2}?
+\item Puedes usar un signo menos para hacer un número negativo como
+{\tt -2}.  ¿Qué ocurre si pones un signo más antes de un número?
+¿Qué pasa con {\tt 2++2}?
 
-\item In math notation, leading zeros are ok, as in {\tt 09}.
-What happens if you try this in Python?  What about {\tt 011}?
+\item En notación matemática, los ceros adelante están bien, como en {\tt 09}.
+¿Qué ocurre si intentas esto en Python?  ¿Qué pasa con {\tt 011}?
 
-\item What happens if you have two values with no operator
-between them?
+\item ¿Qué ocurre si tienes dos valores sin operador
+entre ellos?
 
 \end{enumerate}
 
 \end{exercise}
 
+
+
+\begin{exercise}
+
+Inicia el intérprete de Python y úsalo como una calculadora.
+
+\begin{enumerate}
+
+\item ¿Cuántos segundos hay en 42 minutos con 42 segundos?
+
+\item ¿Cuántas millas hay en 10 kilómetros?  Pista: hay 1.61
+  kilómetros en una milla.
+
+\item Si corres una carrera de 10 kilómetros en 42 minutos con 42 segundos,
+  ¿Cuál es tu ritmo promedio (tiempo por milla en minutos y segundos)?  ¿Cuál
+  es tu rapidez promedio en millas por hora?
+
+\index{calculadora}
+\index{ritmo de carrera}
+
+\end{enumerate}
+
+\end{exercise}
 
 
 \begin{exercise}
