Corrección de detalles en el Prefacio

--- a/book/book.tex
+++ b/book/book.tex
@@ -223,13 +223,13 @@ de programación en Java.  Lo había enseñado tres veces y me estaba frustrando
 La tasa de fracaso en el curso era muy alta y, incluso para estudiantes que
 tenían éxito, el nivel general de logros fue muy bajo.
 
-Uno de los problemas que vi eran los libros.
+Uno de los problemas que vi tenía relación con los libros.
 Eran muy grandes, con demasiados detalles innecesarios sobre Java, y
-sin suficiente orientación de alto nivel acerca de cómo programar.  Y todos
-sufrían el efecto trampilla: comenzarían fácil,
-seguirían gradualmente y luego, en algún lugar alrededor del Capítulo 5,
-se caería el piso.  Los estudiantes conseguirían demasiado material nuevo,
-muy rápido, y yo gastaría el resto del semestre recogiendo los pedazos.
+no tenían suficiente orientación de alto nivel acerca de cómo programar.  Y todos
+sufrían el efecto trampilla: comenzaban con facilidad,
+seguían gradualmente y luego, en algún lugar alrededor del Capítulo 5,
+se caían.  Los estudiantes conseguían demasiado material nuevo,
+muy rápido, y yo ocupaba el resto del semestre recogiendo los pedazos.
 
 Dos semanas antes del primer día de clases, decidí escribir mi propio libro.
 Mis objetivos eran:
@@ -273,25 +273,25 @@ publiqué la primera versión en Python en 2001.
 En 2003 empecé a enseñar en el Olin College y tuve que enseñar Python
 por primera vez.  El contraste con Java fue notable.
 Los estudiantes se esforzaron menos, aprendieron más, trabajaron en más
-proyectos interesante y generalmente se divertían mucho.
+proyectos interesantes y generalmente se divertían mucho.
 \index{Olin College}
 
 Desde entonces he contiunado desarrollando el libro,
 corrigiendo errores, mejorando algunos de los ejemplos y agregando material,
 especialmente ejercicios.
 
-El resultado es este libreo, ahora con el título menos grandioso
+El resultado es este libro, ahora con el título menos grandioso
 {\em Think Python}.  Algunos de los cambios son:
 
 \begin{itemize}
 
 \item Agregué una sección sobre depuración al final de cada capítulo.
   Estas secciones presentan técnicas generales para encontrar y evitar
-  bugs y advertencias sobre trampas de Python.
+  errores de programación y advertencias sobre trampas de Python.
 
 \item Agregué más ejercicios, que van desde pruebas cortas de comprensión
-  hasta algunos proyectos sustanciales.  Más ejercicios
-  incluyen un enlace a mi solución.
+  hasta algunos proyectos sustanciales.  La mayoria de los ejercicios
+  incluye un enlace a mi solución.
 
 \item Agregué una serie de estudios de caso---ejemplos más largos con
   ejercicios, soluciones y discusión.
