Traducción de la sección de Agradecimientos

--- a/book/book.tex
+++ b/book/book.tex
@@ -332,35 +332,35 @@ Allen B. Downey \\
 Olin College \\
 
 
-\section*{Acknowledgments}
+\section*{Agradecimientos}
 
-Many thanks to Jeff Elkner, who
-translated my Java book into Python, which got this project
-started and introduced me to what has turned out to be my
-favorite language.
+Muchas gracias a Jeff Elkner, quien
+tradujo mi libro de Java a Python, lo cual comenzó este
+proyecto y me presentó lo que ha resultado ser mi
+lenguaje favorito.
 \index{Elkner, Jeff}
 
-Thanks also to Chris Meyers, who contributed several sections
-to {\em How to Think Like a Computer Scientist}.
+Gracias también a Chris Meyers, quien contribuyó varias secciones
+a {\em How to Think Like a Computer Scientist}.
 \index{Meyers, Chris}
 
-Thanks to the Free Software Foundation for developing
-the GNU Free Documentation License, which helped make
-my collaboration with Jeff and Chris possible, and Creative
-Commons for the license I am using now.
+Gracias a la Free Software Foundation por desarrollar
+la Licencia de documentación libre de GNU, la cual me ayudó
+a hacer posible mi colaboración con Jeff y Chris, y a Creative
+Commons por la licencia que uso ahora.
 \index{GNU Free Documentation License}
 \index{Free Documentation License, GNU}
 \index{Creative Commons}
 
-Thanks to the editors at Lulu who worked on
+Gracias a los editores de Lulu que trabajaron en
 {\em How to Think Like a Computer Scientist}.
 
-Thanks to the editors at O'Reilly Media who worked on
+Gracias a los editores de O'Reilly Media que trabajaron en
 {\em Think Python}.
 
-Thanks to all the students who worked with earlier
-versions of this book and all the contributors (listed
-below) who sent in corrections and suggestions.
+Gracias a todos los estudiantes que trabajaron con las primeras
+versiones de este libro y a todos los colaboradores (nombrados
+a continuacion) que enviaron correcciones y sugerencias.
 
 
 \section*{Contributor List}
