Traducción de parte de la "Lista de colaboradores"

--- a/book/book.tex
+++ b/book/book.tex
@@ -363,71 +363,71 @@ versiones de este libro y a todos los colaboradores (nombrados
 a continuacion) que enviaron correcciones y sugerencias.
 
 
-\section*{Contributor List}
+\section*{Lista de colaboradores}
 
 \index{contributors}
-More than 100 sharp-eyed and thoughtful readers have sent in
-suggestions and corrections over the past few years.  Their
-contributions, and enthusiasm for this project, have been a
-huge help.
+Más de 100 lectores perspicaces y atentos han enviado
+sugerencias y correcciones en los últimos años.  Sus
+contribuciones, y entusiasmo por este proyecto, han sido una
+ayuda enorme.
 
-If you have a suggestion or correction, please send email to
-{\tt feedback@thinkpython.com}.  If I make a change based on your
-feedback, I will add you to the contributor list
-(unless you ask to be omitted).
+Si tienes una sugerencia o corrección, por favovr envía un email a
+{\tt feedback@thinkpython.com}.  Si yo hago un cambio basado en tu
+retroalimentación, te agregaré a la lista de colaboradores
+(a menos que pidas ser omitido).
 
-If you include at least part of the sentence the
-error appears in, that makes it easy for me to search.  Page and
-section numbers are fine, too, but not quite as easy to work with.
-Thanks!
+Si incluyes al menos una parte de la oración en donde
+aparece el error, eso me facilita la búsqueda.  Números de página
+y sección están bien también, pero no tan fácil para trabajar.
+¡Gracias!
 
 \begin{itemize}
 
 \small
-\item Lloyd Hugh Allen sent in a correction to Section 8.4.
+\item Lloyd Hugh Allen envió una corrección a la Sección 8.4.
 
-\item Yvon Boulianne sent in a correction of a semantic error in
-Chapter 5.
+\item Yvon Boulianne envió una corrección de un error semántico en
+el Capítulo 5.
 
-\item Fred Bremmer submitted a correction in Section 2.1.
+\item Fred Bremmer envió una corrección en la Sección 2.1.
 
-\item Jonah Cohen wrote the Perl scripts to convert the
-LaTeX source for this book into beautiful HTML.
+\item Jonah Cohen escribió los scripts de Perl que convierte la
+fuente de LaTeX para este libro en un hermoso HTML.
 
-\item Michael Conlon sent in a grammar correction in Chapter 2
-and an improvement in style in Chapter 1, and he initiated discussion
-on the technical aspects of interpreters.
+\item Michael Conlon envió una corrección gramatical en el Capítulo 2
+y una mejora de estilo en el Capítulo 1, e inició la discusión
+sobre los aspectos técnicos de los intérpretes.
 
-\item Beno\^{i}t Girard sent in a
-correction to a humorous mistake in Section 5.6.
+\item Beno\^{i}t Girard envió una
+corrección a un error humorístico en la Sección 5.6.
 
-\item Courtney Gleason and Katherine Smith wrote {\tt horsebet.py},
-which was used as a case study in an earlier version of the book.  Their
-program can now be found on the website.
+\item Courtney Gleason y Katherine Smith escribieron {\tt horsebet.py}, que
+fue usado como un estudio de caso en una versión anterior del libro.  Su
+programa encontrarse ahora en el sitio web.
 
-\item Lee Harr submitted more corrections than we have room to list
-here, and indeed he should be listed as one of the principal editors
-of the text.
+\item Lee Harr envió más correcciones de las que caben acá para listar
+y, de hecho, debería aparecer como uno de los principales editores
+del texto.
 
-\item James Kaylin is a student using the text. He has submitted
-numerous corrections.
+\item James Kaylin es un estudiante que usa el texto. Ha enviado
+numerosas correcciones.
 
-\item David Kershaw fixed the broken {\tt catTwice} function in Section
+\item David Kershaw arregló la función rota {\tt catTwice} en la Sección
 3.10.
 
-\item Eddie Lam has sent in numerous corrections to Chapters
-1, 2, and 3.
-He also fixed the Makefile so that it creates an index the first time it is
-run and helped us set up a versioning scheme.
+\item Eddie Lam ha enviado numerosas correcciones a los Capítulos
+1, 2 y 3.
+También arregló el Makefile para que cree un índice la primera vez que
+se ejecuta y nos ayudó a configurar un esquema de versionamiento.
 
-\item Man-Yong Lee sent in a correction to the example code in
-Section 2.4.
+\item Man-Yong Lee envió una corrección al código de ejemplo en la
+Sección 2.4.
 
-\item David Mayo pointed out that the word ``unconsciously"
-in Chapter 1 needed
-to be changed to ``subconsciously".
+\item David Mayo advirtió que la palabra ``unconsciously"
+en el Capítulo 1 necesitaba
+ser cambiada a ``subconsciously".
 
-\item Chris McAloon sent in several corrections to Sections 3.9 and
+\item Chris McAloon envió muchas correcciones a las Secciones 3.9 y
 3.10.
 
 \item Matthew J. Moelter has been a long-time contributor who sent
